# tulsu-homework

./: README.md
.github/workflows/: main.yml  python-app.yml
lab1/: first-task.py  second-task.py  third-task.py
lab2/: error.txt  names_example.txt  second-task.py
tiny-database/: README.md  main.py  pyproject.toml
tiny-database/database/: database.py
tiny-database/tests/: test_database.py
